--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
 
 <p align="center">
-  <img src="Input_Maze_Image.jpg" width="350" title="hover text">
+  <img src="Input_Maze_Image.jpg?raw=true" width="350" title="hover text">
 </p>
