--- a/Readme
+++ b/Readme
@@ -1,4 +1,1 @@
-
-<p align="center">
-  <img src="Input_Maze_Image.jpg?raw=false" width="350" title="hover text">
-</p>
+![alt tag](https://raw.githubusercontent.com/AtharvaKalsekar/Computer_Vision/master/MazeSolver/Input_Maze_Image.jpg)
