--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-![alt tag](https://raw.githubusercontent.com/AtharvaKalsekar/Computer_Vision/master/MazeSolver/Input_Maze_Image.jpg)
+![alt tag](https://raw.githubusercontent.com/AtharvaKalsekar/Computer_Vision/master/MazeSolver/Input_Maze_Image.png)
