--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-![alt tag](https://raw.githubusercontent.com/AtharvaKalsekar/Computer_Vision/master/MazeSolver/Input_Maze_Image.png)
+![alt tag](https://github.com/braghav968/Titanic-Kaggle/blob/master/Input_Maze_Image.png)
