--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-![alt tag](https://github.com/braghav968/Titanic-Kaggle/blob/master/Input_Maze_Image.png)
+![alt](https://github.com/braghav968/Titanic-Kaggle/blob/master/Input_Maze_Image.png)
