--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-![alt text](https://github.com/braghav968/Titanic-Kaggle/raw/master/Input_Maze_Image.jpg)
+![alt text](/images/Input_Maze_Image.png)
