--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-![alt text](/images/Input_Maze_Image.png)
+![alt text](https://raw.githubusercontent.com/braghav968/Titanic-Kaggle/master/images/Input_Maze_Image.png)
