--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
 ![](https://raw.githubusercontent.com/braghav968/Titanic-Kaggle/master/images/Input_Maze_Image.png)
-
+![](images/Input_Maze_Image.png)
 ![](https://cloud.githubusercontent.com/assets/896692/23625282/7f2d79dc-025d-11e7-8728-d8924596f8fa.png)
