--- a/Readme
+++ b/Readme
@@ -3,4 +3,4 @@
 ![Maze Image](https://cloud.githubusercontent.com/assets/896692/23625282/7f2d79dc-025d-11e7-8728-d8924596f8fa.png)
 ![](https://cdn.statically.io/gh/braghav968/Titanic-Kaggle/master/images/Input_Maze_Image.png)
 
-<img src = "https://cdn.statically.io/gh/braghav968/Titanic-Kaggle/master/images/Input_Maze_Image.png"/>
+<img src = "https://cdn.statically.io/gh/braghav968/Titanic-Kaggle/master/images/Input_Maze_Image.png">
