--- a/Readme
+++ b/Readme
@@ -5,3 +5,30 @@
 <p>
 <img src = "https://cdn.statically.io/gh/braghav968/Titanic-Kaggle/master/images/Input_Maze_Image.png">
 </p>
+
+# Face Recognition
+
+_You can also read a translated version of this file [in Chinese 简体中文版](https://github.com/ageitgey/face_recognition/blob/master/README_Simplified_Chinese.md) or [in Korean 한국어](https://github.com/ageitgey/face_recognition/blob/master/README_Korean.md) or [in Japanese 日本語](https://github.com/m-i-k-i/face_recognition/blob/master/README_Japanese.md)._
+
+Recognize and manipulate faces from Python or from the command line with
+the world's simplest face recognition library.
+
+Built using [dlib](http://dlib.net/)'s state-of-the-art face recognition
+built with deep learning. The model has an accuracy of 99.38% on the
+[Labeled Faces in the Wild](http://vis-www.cs.umass.edu/lfw/) benchmark.
+
+This also provides a simple `face_recognition` command line tool that lets
+you do face recognition on a folder of images from the command line!
+
+
+[![PyPI](https://img.shields.io/pypi/v/face_recognition.svg)](https://pypi.python.org/pypi/face_recognition)
+[![Build Status](https://github.com/ageitgey/face_recognition/workflows/CI/badge.svg?branch=master&event=push)](https://github.com/ageitgey/face_recognition/actions?query=workflow%3ACI)
+[![Documentation Status](https://readthedocs.org/projects/face-recognition/badge/?version=latest)](http://face-recognition.readthedocs.io/en/latest/?badge=latest)
+
+## Features
+
+#### Find faces in pictures
+
+Find all the faces that appear in a picture:
+
+![](https://cloud.githubusercontent.com/assets/896692/23625227/42c65360-025d-11e7-94ea-b12f28cb34b4.png)
